--- a/pizza_project/index.html
+++ b/pizza_project/index.html
@@ -146,15 +146,314 @@
                </div>
             </div>
          </section>
+
+         <section class="recipe section">
+            <h2 class="section__title">
+               Fresh And <br>Natural Ingredients 
+            </h2>
+
+            <div class="recipe__container container grid">
+               <div class="recipe__list grid">
+                  <div class="recipe__ingredient">
+                     <img src="img/recipe-flour.png" alt="Image" class="recipe__image">
+
+                     <div>
+                        <h3 class="recipe__name">
+                           Flour
+                        </h3>
+                        <p class="recipe__description">
+                           The best wheat from the field for the best flour.
+                        </p>
+                     </div>
+                  </div>
+
+                  <div class="recipe__ingredient">
+                     <img src="img/recipe-cheese.png" alt="Image" class="recipe__image">
+
+                     <div>
+                        <h3 class="recipe__name">
+                           Cheese
+                        </h3>
+                        <p class="recipe__description">
+                           Indulge in cheese for a healthy future.
+                        </p>
+                     </div>
+                  </div>
+
+                  <div class="recipe__ingredient">
+                     <img src="img/recipe-sauces.png" alt="Image" class="recipe__image">
+
+                     <div>
+                        <h3 class="recipe__name">
+                           Sauces
+                        </h3>
+                        <p class="recipe__description">
+                           Add a touch of salsa to your life and it will be better.
+                        </p>
+                     </div>
+                  </div>
+
+                  <div class="recipe__ingredient">
+                     <img src="img/recipe-tomato.png" alt="Image" class="recipe__image">
+
+                     <div>
+                        <h3 class="recipe__name">
+                           Vegetables
+                        </h3>
+                        <p class="recipe__description">
+                           Vegetables full of the essence of nature and organic.
+                        </p>
+                     </div>
+                  </div>
+
+                  <div class="recipe__ingredient">
+                     <img src="img/recipe-meat.png" alt="Image" class="recipe__image">
+
+                     <div>
+                        <h3 class="recipe__name">
+                           Meats
+                        </h3>
+                        <p class="recipe__description">
+                           The best fresh meats for your health.
+                        </p>
+                     </div>
+                  </div>
+               </div>
+
+               <img src="img/recipe-img.png" alt="Image" class="recipe__img">
+            </div>
+         </section>
+
+         <section class="products section" id="products">
+            <h2 class="section__title">
+               The Most <br>Devoured Pizzas
+            </h2>
+
+            <div class="products__container container grid">
+               <article class="products__card">
+                  <img src="img/product-1.png" alt="Image" class="products__img">
+
+                  <h3 class="products__name">
+                     Vegetarian <br>Pizza
+                  </h3>
+                  <span class="products__price">
+                     15$
+                  </span>
+
+                  <button class="products__button">
+                     <i class="ri-shopping-bag-3-fill">
+                     </i>
+                  </button>
+               </article>
+
+               <article class="products__card">
+                  <img src="img/product-2.png" alt="Image" class="products__img">
+
+                  <h3 class="products__name">
+                     Pepperoni <br>Pizza
+                  </h3>
+                  <span class="products__price">
+                     10$
+                  </span>
+
+                  <button class="products__button">
+                     <i class="ri-shopping-bag-3-fill">
+                     </i>
+                  </button>
+               </article>
+
+               <article class="products__card">
+                  <img src="img/product-3.png" alt="Image" class="products__img">
+
+                  <h3 class="products__name">
+                     Margherita <br>Pizza
+                  </h3>
+                  <span class="products__price">
+                     12$
+                  </span>
+
+                  <button class="products__button">
+                     <i class="ri-shopping-bag-3-fill">
+                     </i>
+                  </button>
+               </article>
+
+               <article class="products__card">
+                  <img src="img/product-4.png" alt="Image" class="products__img">
+
+                  <h3 class="products__name">
+                     Mushroom <br>Pizza
+                  </h3>
+                  <span class="products__price">
+                     17$
+                  </span>
+
+                  <button class="products__button">
+                     <i class="ri-shopping-bag-3-fill">
+                     </i>
+                  </button>
+               </article>
+
+               <article class="products__card">
+                  <img src="img/product-5.png" alt="Image" class="products__img">
+
+                  <h3 class="products__name">
+                     Italian <br>Pizza
+                  </h3>
+                  <span class="products__price">
+                     10$
+                  </span>
+
+                  <button class="products__button">
+                     <i class="ri-shopping-bag-3-fill">
+                     </i>
+                  </button>
+               </article>
+            </div>
+         </section>
+
+         <section class="contact section" id="contact">
+            <div class="contact__container container grid">
+               <h2 class="section__title">
+                  Contact Now
+               </h2>
+
+               <div class="contact__info grid">
+                  <div>
+                     <h3 class="contact__title">
+                        Write Us
+                     </h3>
+                     <div class="contact__social">
+                        <a href="https://web.whatsapp.com/" target="_blank" class="contact__social-link">
+                           <i class="ri-whatsapp-fill"></i>
+                        </a>
+
+                        <a href="https://www.messenger.com/?locale=tr_TR" target="_blank" class="contact__social-link">
+                           <i class="ri-messenger-fill"></i>
+                        </a>
+
+                        <a href="https://web.telegram.org/" target="_blank" class="contact__social-link">
+                           <i class="ri-telegram-fill"></i>
+                        </a>
+                     </div>
+                  </div>
+
+                  <div>
+                     <h3 class="contact__title">
+                        Delivery
+                     </h3>
+
+                     <address class="contact__address">
+                        +90-212-212-2121 <br>
+                        +90-216-216-2121
+                     </address>
+                  </div>
+
+                  <div>
+                     <h3 class="contact__title">
+                        Location
+                     </h3>
+
+                     <address class="contact__location">
+                        Capa-Fatih-Istanbul
+                     </address>
+
+                      <a href="https://g.co/kgs/7HJ7v3c" class="contact__map" target="_blank">
+                        <i class="ri-map-pin-fill">
+                        </i>
+                        <span>View On Map</span>
+                      </a>
+                  </div>
+               </div>
+
+               <div class="contact__image">
+                  <img src="img/contact-img.png" alt="Image" class="contact__img">
+               </div>
+   
+               <img src="img/sticker-tomato.svg" alt="Image" class="contact__sticker-1">
+   
+               <img src="img/sticker-mushroom.svg" alt="Image" class="contact__sticker-2">
+   
+               <img src="img/sticker-onion.svg" alt="Image" class="contact__sticker-3">
+            </div>
+         </section>
       </main>
 
       <!--==================== FOOTER ====================-->
-      <footer>
+      <footer class="footer">
+         <div class="footer__container container grid">
+            <a href="#" class="footer__logo">Pizza</a>
 
+            <div class="footer__content grid">
+               <div>
+                  <h3 class="footer__title">
+                     Social
+                  </h3>
+
+                  <div class="footer__social">
+                     <a href="https://www.facebook.com/" target="_blank" class="footer__social-link">
+                        <i class="ri-facebook-circle-fill"></i>
+                     </a>
+
+                     <a href="https://www.instagram.com/" target="_blank" class="footer__social-link">
+                        <i class="ri-instagram-fill"></i>
+                     </a>
+
+                     <a href="https://twitter.com/" target="_blank" class="footer__social-link">
+                        <i class="ri-twitter-x-fill"></i>
+                     </a>
+                  </div>
+               </div>
+
+               <div>
+                  <h3 class="footer__title">
+                     Payment Methods
+                  </h3>
+
+                  <div class="footer__pay">
+                     <img src="img/footer-card-1.png" alt="Image" class="footer__pay-img">
+
+                     <img src="img/footer-card-2.png" alt="Image" class="footer__pay-img">
+
+                     <img src="img/footer-card-3.png" alt="Image" class="footer__pay-img">
+
+                     <img src="img/footer-card-4.png" alt="Image" class="footer__pay-img">
+                  </div>
+               </div>
+
+               <div>
+                  <h3 class="footer__title">
+                     Subscribe For Discounts
+                  </h3>
+
+                  <form action="" class="footer__form">
+                     <input class="footer__input" type="email" placeholder="Email">
+                     <button type="submit" class="footer__button button">
+                        Subscribe
+                     </button>
+                  </form>
+               </div>
+            </div>
+         </div>
+
+         <div class="footer__policy">
+            <a href="#" class="footer__link">
+               Term & Aggrements
+            </a>
+            <a href="#" class="footer__link">
+               Privacy Policy
+            </a>
+         </div>
+
+         <span class="footer__copy">
+            %#169; All rights Reserved By Efe Alp 
+         </span>
       </footer>
 
       <!--========== SCROLL UP ==========-->
-
+      <a href="#" class="scrollup" id="scroll-up">
+         <i class="ri-arrow-up-line"></i>
+      </a>
       <!--=============== SCROLLREVEAL ===============-->
       
       
