--- a/pizza_project/index.html
+++ b/pizza_project/index.html
@@ -29,7 +29,7 @@
             <div class="nav__menu" id="nav-menu">
                <ul class="nav__list">
                   <li>
-                     <a href="#home" class="nav__link">Home</a>
+                     <a href="#home" class="nav__link active-link">Home</a>
                   </li>
                   <li>
                      <a href="#about" class="nav__link">About</a>
@@ -88,7 +88,7 @@
          </section>
 
          <!-- ABOUT -->
-         <section class="about section">
+         <section class="about section" id="about">
           <div class="about__container contianer grid">
             <div class="about__data">
                <h2 class="section__title">Learn More About <br>Our Story
@@ -107,7 +107,7 @@
           </div>
          </section> 
 
-         <section class="recipe popular">
+         <section class="recipe popular" id="popular">
             <div class="popular__container container grid">
                <div class="popular__data">
                   <h2 class="section__title">
