--- a/pizza_project/index.html
+++ b/pizza_project/index.html
@@ -24,7 +24,7 @@
          <nav class="nav container">
             <a href="#" class="nav__logo">
                <img src="img/logo-pizza.svg" alt="Logo">
-               Pizza mea!
+               <div>Pizza Mea!</div>
             </a>
             <div class="nav__menu" id="nav-menu">
                <ul class="nav__list">
@@ -314,11 +314,11 @@
 
          <section class="contact section" id="contact">
             <div class="contact__container container grid">
-               <h2 class="section__title">
-                  Contact Now
-               </h2>
-
                <div class="contact__info grid">
+                  <h2 class="section__title">
+                     Contact Now
+                  </h2>
+                  
                   <div>
                      <h3 class="contact__title">
                         Write Us
