--- a/pizza_project/index.html
+++ b/pizza_project/index.html
@@ -446,7 +446,7 @@
          </div>
 
          <span class="footer__copy">
-            %#169; All rights Reserved By Efe Alp 
+            %#169; All rights Reserved By BedimCode 
          </span>
       </footer>
 
@@ -455,7 +455,7 @@
          <i class="ri-arrow-up-line"></i>
       </a>
       <!--=============== SCROLLREVEAL ===============-->
-      
+      <script src="js/scrollreveal.min.js"></script>
       
       <!--=============== SWIPER JS ===============-->
       <script src="js/swiper-bundle.min.js"></script>
